Replaced println with Log4j logger. * removed getColorFromString from Enrichment Chart classes * fixed minor warnings